lxml changelog
==============

current
=======

Features added
--------------

* PyErrorLog for error logging through the Python ``logging`` module

* ``element.getroottree()`` returns an ElementTree for the root node of the
  document that contains the element.

* ElementTree.getpath(element) returns a simple, absolute XPath expression to
  find the element in the tree structure

* Error logs have a ``last_error`` attribute for convenience

* Comment texts can be changed through the API

Bugs fixed
----------

* Unknown constants from newer libxml2 versions could raise exceptions in the
  error handlers

* lxml.etree compiles much faster

* On libxml2 <= 2.6.22, parsing strings with encoding declaration could fail
  in certain cases

* Document reference in ElementTree objects was not updated when the root
  element was moved to a different document

* Running absolute XPath expressions on an Element now evaluates against the
  root tree

* Evaluating absolute XPath expressions ('/*') on an ElementTree could fail

* Crashes when calling XSLT, RelaxNG, etc. with uninitialized ElementTree
  objects

* Removed public function ``initThreadLogging()``, replaced by more general
  ``initThread()`` which fixes a number of setup problems in threads

* Memory leak when using iconv encoders in tostring/write

* Deep copying Elements and ElementTrees maintains the document information

* Serialization functions raise LookupError for unknown encodings

* Memory deallocation crash resulting from deep copying elements


1.0.beta (2006-05-18)
=====================

Features added
--------------

* Formatted output via ``pretty_print`` keyword in serialization functions

* XSLT can block access to file system and network via ``XSLTAccessControl``

* ElementTree.write() no longer serializes in memory (reduced memory
  footprint)

* Speedup of Element.findall(tag) and Element.getiterator(tag)

* Support for writing the XML representation of Elements and ElementTrees to