@@ -1,4 +1,4 @@
-from tree cimport xmlDoc
+from tree cimport xmlDoc, xmlOutputBuffer
 from xpath cimport xmlNodeSet
     
 cdef extern from "libxml/c14n.h":
@@ -8,4 +8,19 @@ cdef extern from "libxml/c14n.h":
                                   char** inclusive_ns_prefixes,
                                   int with_comments,
                                   char** doc_txt_ptr)
+
+    cdef int xmlC14NDocSave(xmlDoc* doc,
+                            xmlNodeSet* nodes,
+                            int exclusive,
+                            char** inclusive_ns_prefixes,
+                            int with_comments,
+                            char* filename,
+                            int compression)
+
+    cdef int xmlC14NDocSaveTo(xmlDoc* doc,
+                              xmlNodeSet* nodes,
+                              int exclusive,
+                              char** inclusive_ns_prefixes,
+                              int with_comments,
+                              xmlOutputBuffer* buffer)
     
